# course_work_3-04.2023-

./: README.md  pyproject.toml
data/: conf.py
main/: utils.py
main/classes/: Class_Currency.py  Class_OperationAmount.py  Class_Operations.py
src/: main.py  utils.py
src/classes/: Class_Currency.py  Class_OperationAmount.py  Class_Operations.py
test/: test_utils.py
